# PAReTT

./: LICENSE  README.md  _init_.py  parett.py  setup.cfg  setup.py
examples/: Available.csv  Output.csv  Saxicola_species.nwk  Species.nwk  Species.txt
src/: _init_.py  parett.py
tests/: Adcyap_DivTimes.csv  Adcyap_Missings.csv  Species_Adcyap.txt
