[metadata]
name = PAReTT
version = 1.0.1
author = Louis-Stephane Le Clercq
author_email = leclercq.l.s@gmail.com
description = Python Automated Retrieval of TimeTree data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSLeClercq/PAReTT
project_urls =
    Bug Tracker = https://github.com/LSLeClercq/PAReTT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas
    Bio
    splinter
python_requires = >=3.6

[options.entry_points]
console_scripts =
    executable-name = parett.module:main
    
[options.packages.find]
where = src
